--- a/sentinel/sentinel-feign/sentinel-feign-provider/pom.xml
+++ b/sentinel/sentinel-feign/sentinel-feign-provider/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>sentinel</artifactId>
+        <artifactId>sentinel-feign</artifactId>
         <groupId>com.wucfu</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -30,14 +30,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.maven.plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
             </plugin>
         </plugins>
     </build>
